Explicitly set the fbcon pixmap pitch again

The kernel driver returns 0 as the pitch of the fbcon BO via the
DRM_RADEON_GEM_GET_TILING ioctl, so we ended up using an incorrect
pitch in some cases.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=94901

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>
(Cherry picked from commit 040a7b80e1fcbaa93ac17f7113d696d9b853cf8a)